--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,9 @@
         </include>
 
         <fragment
-            android:id="@+id/fragment"
+            android:id="@+id/fragment1"
             android:name="skateam.mywele.Page1"
+
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
