--- a/app/src/main/res/layout/activity_page1.xml
+++ b/app/src/main/res/layout/activity_page1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/page1_activity"
@@ -12,6 +12,5 @@
         android:layout_width="match_parent"
         android:layout_height="500dp"
         android:gravity="center_vertical|center_horizontal"
-        android:text="TextView"
         android:textSize="36sp" />
-</LinearLayout>
+</FrameLayout>
