--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         </include>
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btnFlash"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="ChuyenManHinh"
